Nav, desktop z-index fix

--- a/styles.css
+++ b/styles.css
@@ -340,6 +340,7 @@ header {
   right: 0;
   /* whoaaa this was genius. the nav links to other pages was only working as long as you weren't clicking on the font awesome icon. with the line below this it now works even if you click on the icons */
   pointer-events: none;
+  z-index: 10;
 }
 .nav-item a {
   height: 50px;
@@ -349,7 +350,6 @@ header {
 .nav-item h2 {
   font-size: 1.6rem;
   font-weight: 500;
-  /* z-index: -1; */
   position: absolute;
   top: 0;
   right: 0;
